PRODUCT-DETAILS fixed sending wrong size value. CART, mobile responsive, margin change and hr added

--- a/src/app/features/pages/cart/cart.component.css
+++ b/src/app/features/pages/cart/cart.component.css
@@ -7,6 +7,7 @@ img {
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
+  margin-top: 5px;
 }
 
 .productDetails{
